CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8-dev

Documentation
======================
* Composite builder does not support Pause builder child element (CC-812). Reported by John Camerin

build loop
======================

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

ScriptRunner
---------------------
* Change ScriptRunner/AntBuilder to only create antBuilderOutput.log when needed. Reported by Jared Tafralian.

UCM
---------------------
* Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.


CruiseControl Release Notes - 2.7.3

general
======================
* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (that also works on FreeBSD) (CC-789). Patch by Ivan "Rambius" Ivanov
* Update saxon to 9.0.0.6
* Update bundled cc-config to version 1.8.

build loop
======================

ClearCase
---------------------
* Change cleartool command line to always use date in US format, ignoring the language set in the operating System (CC-818). Patch by Jean-Philippe HAUTIN.

ClearCaseViewstrapper
---------------------
* ClearCaseViewStrapper would cancel the build if the view was already mounted (CC-757).  Reported by Gerrit Brehmer. Patch by Glenn Opdycke-Hansen.

CMSynergy
---------------------
* Now throws exception when contacting the server fails. This will abort the build rather than continuing with potentially incomplete or incorrect information.

ExecBuilder
---------------------
* Improve error message when there are no arguments.
* Substitute properites in arguments (like ${label} or ${projectname})
* Error lines reported by an external script are now injected into the build log (CC-763). Patch by Adrian Spinei.

Git Source Control & Bootstrapper
----------------------