@@ -115,11 +115,6 @@
 		<mkdir dir="${junit.results}" />
 		<mkdir dir="${emma.results}" />
 
-		<available file="${lib}/jhsdk.jar" property="harvest-sdk-present" />
-		<available file="${lib}/starteam-sdk.jar" property="starteam-sdk-present" />
-		<available file="${lib}/STComm.jar" property="sametime-sdk-present" />
-		<available file="${lib}/ymsg_support_v0_6.jar" property="yahoo-sdk-present" />
-
 		<available file="${env.NANT_HOME}/NAnt.exe" property="nant-present" />
 
 		<tstamp />
@@ -147,12 +142,7 @@
 	</macrodef>
 
 	<target name="compile" depends="init" unless="compile.skip" description="Compile source code">
-		<compile-macro>
-			<exclude name="**/AllFusionHarvest*" />
-			<exclude name="**/StarTeam*" />
-			<exclude name="**/Sametime*" />
-			<exclude name="**/Yahoo*" />
-		</compile-macro>
+		<compile-macro/>
 
 		<copy todir="${classes}">
 			<fileset dir="${basedir}" includes="*.properties" />
@@ -167,37 +157,9 @@
 		</copy>
 	</target>
 
-	<target name="compile-harvest" if="harvest-sdk-present" depends="init">
-		<compile-macro>
-			<include name="**/AllFusionHarvest*" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-starteam" if="starteam-sdk-present" depends="init">
-		<compile-macro>
-			<include name="**/StarTeam*" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-sametime" if="sametime-sdk-present" depends="init">
-		<compile-macro>
-			<include name="**/Sametime*" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-yahoo" if="yahoo-sdk-present" depends="init">
-		<compile-macro>
-			<include name="**/Yahoo*" />
-		</compile-macro>
-	</target>
-
 	<target name="compile-test" depends="compile" description="Compile test code">
 		<compile-macro srcdir="${test}" destdir="${test.classes}">
 			<classpath refid="project.runtime.classpath" />
-			<exclude name="**/AllFusionHarvest*" />
-			<exclude name="**/StarTeam*" />
-			<exclude name="**/Sametime*" />
-			<exclude name="**/Yahoo*" />
 		</compile-macro>
 
 		<copy todir="${test.classes}">
@@ -217,33 +179,6 @@
             <fileset dir="${functionaltest}" excludes="**/*.java" />
         </copy>
     </target>
-
-	<target name="compile-test-harvest" if="harvest-sdk-present" depends="compile-harvest">
-		<compile-macro srcdir="${test}" destdir="${test.classes}">
-			<classpath refid="project.runtime.classpath" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-test-starteam" if="starteam-sdk-present" depends="compile-starteam">
-		<compile-macro srcdir="${test}" destdir="${test.classes}">
-			<classpath refid="project.runtime.classpath" />
-			<include name="**/StarTeam*" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-test-sametime" if="sametime-sdk-present" depends="compile-sametime">
-		<compile-macro srcdir="${test}" destdir="${test.classes}">
-			<classpath refid="project.runtime.classpath" />
-			<include name="**/Sametime*" />
-		</compile-macro>
-	</target>
-
-	<target name="compile-test-yahoo" if="yahoo-sdk-present" depends="compile-yahoo">
-		<compile-macro srcdir="${test}" destdir="${test.classes}">
-			<classpath refid="project.runtime.classpath" />
-			<include name="**/Yahoo*" />
-		</compile-macro>
-	</target>
 
 	<target name="-checkstyle">
 		<checkstyle-macro
@@ -305,22 +240,6 @@
 	
 	<target name="functional-test" depends="init, compile-functional-test" unless="test.skip" description="Executes the functional tests">
 		<test-macro includes="**/BuildLoopMonitorTest.class" />
-	</target>
-
-	<target name="test-harvest" depends="init, compile-test-harvest" unless="test.skip">
-		<test-macro includes="**/AllFusionHarvest*Test.class" />
-	</target>
-
-	<target name="test-starteam" depends="init, compile-test-starteam" unless="test.skip">
-		<test-macro includes="**/StarTeam*Test.class" />
-	</target>
-
-	<target name="test-sametime" depends="init, compile-test-sametime" unless="test.skip">
-		<test-macro includes="**/Sametime*Test.class" />
-	</target>
-
-	<target name="test-yahoo" depends="init, compile-test-yahoo" unless="test.skip">
-		<test-macro includes="**/Yahoo*Test.class" />
 	</target>
 
 	<target name="test-one" depends="compile-test" description="Executes one unit test" if="testcase">
@@ -400,11 +319,10 @@
 
     </target>
 
-    <target name="all" depends="init,compile-all,-checkstyle,test-all,jar" description="Performs a build, runs tests, and builds jar" />
+    <target name="all" depends="init,compile,-checkstyle,test-all,jar" description="Performs a build, runs tests, and builds jar" />
     <target name="checkstyle" depends="-checkstyle" description="Run Checkstyle" />
     <target name="clean-all" depends="clean, all" description="Performs a clean build, runs tests, and builds jar" />
-    <target name="compile-all" depends="compile, compile-harvest, compile-sametime, compile-starteam, compile-yahoo" description="Compile everything" />
-    <target name="test-all" depends="test, functional-test, test-harvest, test-starteam, test-sametime, test-yahoo" description="Run all tests" />
+    <target name="test-all" depends="test, functional-test" description="Run all tests" />
     <target name="vizant" depends="-vizant" description="Visualise the Ant build file" />
 
 </project>
