@@ -4,9 +4,18 @@ Changes listed by release, then alphabetically.
 
 CruiseControl Release Notes - 2.8-dev
 
+contrib
+======================
+* Move plugins that require external libraries to build out of cruisecontrol/main. They are not under cruisecontrol/contrib/plugins. Affected plugins include:
+  - AllFusionHarvest
+  - Sametime
+  - StarTeam
+  - Yahoo
+
 Documentation
 ======================
 * Composite builder does not support Pause builder child element (CC-812). Reported by John Camerin
+* Add documentation on "Building Plugins That Need External Libraries".
 
 build loop
 ======================
